--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,8 @@ spring.datasource.url=jdbc:mysql://localhost:3306/hb_student?useSSL=false
 spring.datasource.username=hbstudent
 spring.datasource.password=hbstudent
 
+#auto update from entity
+spring.jpa.hibernate.ddl-auto= update
 
 # Connection pool properties
 #
