--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,19 +6,19 @@ spring.datasource.url=jdbc:mysql://localhost:3306/hb_student?useSSL=false
 spring.datasource.username=hbstudent
 spring.datasource.password=hbstudent
 
-#auto update from entity
+#auto update helps us to create table and columns according with help of entity class
 spring.jpa.hibernate.ddl-auto= update
 
 # Connection pool properties
 #
-connection.pool.initialPoolSize=5
-connection.pool.minPoolSize=5
-connection.pool.maxPoolSize=20
-connection.pool.maxIdleTime=3000
+#connection.pool.initialPoolSize=5
+#connection.pool.minPoolSize=5
+#connection.pool.maxPoolSize=20
+#connection.pool.maxIdleTime=3000
 
-#
+
 # Hibernate properties
 #
-hibernate.dialect=org.hibernate.dialect.MySQLDialect
-hibernate.show_sql=true
-hibernate.packagesToScan=com.project.csvupload.entity
+#hibernate.dialect=org.hibernate.dialect.MySQLDialect
+#hibernate.show_sql=true
+#hibernate.packagesToScan=com.project.csvupload.entity
